# kael

./: .gitignore  Cargo.toml  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  registry_request.md
.github/workflows/: ci.yml
registry/agents/_base/: architect.md  cost-optimizer.md  debugger.md  docs-writer.md  optimizer.md  reviewer.md  security-auditor.md  test-architect.md  ui-developer.md
registry/agents/go/: api-expert.md  systems-expert.md
registry/agents/python/: backend-expert.md  data-engineer.md  ml-engineer.md
registry/agents/rust/: perf-engineer.md  runtime-expert.md  unsafe-auditor.md
registry/agents/typescript/: fullstack-expert.md  node-expert.md  react-expert.md
registry/commands/: architect.md  commit.md  debug.md  init.md  release.md  review.md  security.md  test.md
registry/skills/_common/api-design/: SKILL.md
registry/skills/_common/ci-cd/: SKILL.md
registry/skills/_common/design-review/: SKILL.md
registry/skills/_common/documentation/: SKILL.md
registry/skills/_common/git-workflow/: SKILL.md
registry/skills/_common/model-separation/: SKILL.md
registry/skills/_common/testing/: SKILL.md
registry/skills/go/api-patterns/: SKILL.md
registry/skills/go/concurrency/: SKILL.md
registry/skills/go/testing/: SKILL.md
registry/templates/: CLAUDE.md  agent.md  settings.json  skill.md
src/: error.rs  main.rs
src/cli/: add.rs  doctor.rs  generate.rs  init.rs  list.rs  mod.rs  remove.rs
src/core/: generator.rs  matcher.rs  mod.rs  prd.rs  project.rs  registry.rs
src/template/: engine.rs
(+13 files in other folders)
